WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133884
GCController should return FastMalloc memory to the system.
https://bugs.webkit.org/show_bug.cgi?id=133884
Summary
GCController should return FastMalloc memory to the system.
Andreas Kling
Reported
2014-06-13 15:11:52 PDT
Let's madvise some pages back to the system in GCController.garbageCollectNow() to make our memory test results more accurate!
Attachments
Patch
(1.60 KB, patch)
2014-06-13 15:12 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-06-13 15:12:25 PDT
Created
attachment 233081
[details]
Patch
WebKit Commit Bot
Comment 2
2014-06-13 15:13:30 PDT
Attachment 233081
[details]
did not pass style-queue: ERROR: Source/WebCore/bindings/js/GCController.cpp:34: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2014-06-14 12:39:48 PDT
Comment on
attachment 233081
[details]
Patch Clearing flags on attachment: 233081 Committed
r169977
: <
http://trac.webkit.org/changeset/169977
>
WebKit Commit Bot
Comment 4
2014-06-14 12:39:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug