GCController should return FastMalloc memory to the system. <https://webkit.org/b/133884>

Reviewed by Anders Carlsson.

Speculative test fix; I'm kinda suspecting that some tests are reporting
more memory used because we did a GC but didn't get around to returning
free pages to the system yet.

* bindings/js/GCController.cpp:
(WebCore::GCController::garbageCollectNow):


Canonical link: https://commits.webkit.org/151853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169977 268f45cc-cd09-0410-ab3c-d52691b4dbfc